--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <button>케이크</button>
                         <button>나가사키 카스테라</button>
                         <button>생롤</button>
-                        <button>구음과자</button>
+                        <button>구움과자</button>
                         <button>초콜릿</button>
                         <button>수제잼</button>
                         <button>기타</button>
